...
    <string name="home_transaction_item_subtitle" translatable="false">%1$s • %2$s</string>
    <string name="transactions_search_query_preview" translatable="false">\"%s\"</string>
    <string name="transaction_details_tags" translatable="false">Tag</string>
    <string name="home_balance_summary_cd" translatable="false">%1$s: %2$s, %3$s</string>
    <string name="home_insight_row_cd" translatable="false">%1$s: %2$s</string>

    <string name="language_english" translatable="false">English</string>
    <string name="language_italian" translatable="false">Italiano</string>
    <string name="language_french" translatable="false">Français</string>
    <string name="language_german" translatable="false">Deutsch</string>
    <string name="language_spanish" translatable="false">Español</string>
    <string name="language_chinese_simplified" translatable="false">Chinois (Mandarin)</string>
    <string name="language_chinese_traditional" translatable="false">Chinois (Traditionnel)</string>
...
